# crasis

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SCORECARD.md  pyproject.toml
crasis/: __init__.py  agent.py  cli.py  deploy.py  eval.py  export.py  factory.py  mcp_server.py  orchestrator.py  spec.py  tools.py  train.py
docs/: AGENTIC.md  ROADMAP.md  SETUP.md  SPARKI.md
examples/: benchmark_vs_haiku.py  claude_agent.py  support_agent.py
examples/inbox/: README.md  generate_demo_inbox.py  run_demo.py
examples/whatsapp_test_data/: benchmark_results.json  holdout.jsonl
scripts/: benchmark_agent_calls.py  benchmark_generators.py  release_specialists.py
specialists/availability-handler/: README.md  spec.yaml
specialists/email-urgency/: README.md  spec.yaml
specialists/invoice-intent/: README.md  spec.yaml
specialists/meeting-parser/: README.md  spec.yaml
specialists/pricing-detector/: README.md  spec.yaml
specialists/sentiment-gate/: README.md  spec.yaml
specialists/social-classifier/: README.md  spec.yaml
specialists/spam-filter/: README.md  spec.yaml
specialists/support-router/: README.md  spec.yaml
specialists/whatsapp-triage/: README.md  spec.yaml
tests/: test_deploy.py  test_eval.py  test_factory.py  test_mcp_e2e.py  test_mcp_server.py  test_orchestrator.py  test_spec.py  test_tools.py  test_train.py
tests/fixtures/: availability-handler.jsonl  email-urgency.jsonl  invoice-intent.jsonl  meeting-parser.jsonl  pricing-detector.jsonl  sentiment-gate.jsonl  social-classifier.jsonl  spam-filter.jsonl  (+2 more)
(+1 files in other folders)
