[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crasis"
version = "1.1.2"
description = "Distill frontier model intelligence into tiny, local specialist models"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Adam", email = "adam@crasis.ai" }]
requires-python = ">=3.11"
keywords = ["machine-learning", "onnx", "distillation", "nlp", "edge-ai", "local-inference"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "onnxruntime>=1.15",
    "onnx>=1.14",
    "requests>=2.28",
    "transformers>=4.30",
]

[project.optional-dependencies]
train = [
    "openai>=1.0",
    "torch>=2.0",
    "datasets>=2.0",
    "scikit-learn>=1.0",
    "optimum[onnxruntime]>=1.13",
]
all = ["crasis[train]"]

[project.urls]
Homepage = "https://crasis.ai"
Repository = "https://github.com/crasis-ai/crasis"
Documentation = "https://github.com/crasis-ai/crasis#readme"
Issues = "https://github.com/crasis-ai/crasis/issues"

[project.scripts]
crasis = "crasis.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["crasis*"]
